style/1092636.css
body {
    /* Let's get rid of the automatic padding. */
	margin:0 auto;
	padding:0;
	/* Our page needs to be full width. */
	width:100%;
	/* This will hide the horizontal scrollbar. */
	overflow-x: hidden;
	font-family: 'Ubuntu', serif;
}

p {
	margin: 0px;
	padding: 0px;
}

a,
a:hover,
a:focus,
a:active,
a.active {
    outline: 0;
    color: #DB2929;
	text-decoration: none;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	text-transform: uppercase;
	font-weight: 900;
}

h1 {
	text-align: center;
	font-size: 48px;
	margin: 0px;
}

#navigation {
	/* Let's make sure the navigation bar won't scroll away. */
	position: fixed;
	/* We're giving the bar the highest z-index value, so it's always on top of our absolute positioned content and such. */
	z-index: 100;
	top: 0;
	width: 100%;
	color: #ffffff;
	height: 35px;
	text-align: center;
	padding-top: 15px;
	padding-bottom: 5.5px;
	/* Adds shadow to the bottom of the bar */
	-webkit-box-shadow: 0px 0px 8px 0px #000000;
	-moz-box-shadow: 0px 0px 8px 0px #000000;
	box-shadow: 0px 0px 8px 0px #000000;
	/* Adds the transparent background */
	background-color: rgba(1, 1, 1, 0.8);
	color: rgba(1, 1, 1, 0.8);
}

#navigation a {
	font-size: 20px;
	font-weight: 500;
	padding-left: 15px;
	padding-right: 15px;
	color: white;
	text-decoration: none;
	text-transform: uppercase;
}

#navigation a:hover {
	color: grey;
}

#home {
	height:100vh;
	background: url(../images/bg.jpg) no-repeat center center fixed;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
}

#headerphoto {
	width: 300px;
	height: 300px;
	border-radius: 150px;
	-webkit-border-radius: 150px;
	-moz-border-radius: 150px;
	background: url(../images/reinier.png) no-repeat;
	
}

#hobbies {
}

#wauw {
	background-color: #1e1f23;
	color: #ffffff;
}

.container {
	width: 60%;
    margin-right: auto;
    margin-left: auto;
    padding-left: 15px;
    padding-right: 15px;
}

.row {
	padding-top: 20px;
	padding-bottom: 20px;
}

.centerimage {
	position: absolute;
    top:0;
    left:0;
    right:0;
    bottom:0;
    margin:auto;
}

